[package]
name = "hn-clone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/Demonthos/dioxus", branch = "router-typesafe" }
dioxus-web = { git = "https://github.com/Demonthos/dioxus", branch = "router-typesafe" }

chrono = { version = "0.4.19", features = ["serde", "wasmbind"] }
futures = "0.3.17"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
